--- a/midterm_practice-003/index.html
+++ b/midterm_practice-003/index.html
@@ -4,17 +4,59 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Et-710 Midterm</title>
+
+    <!-- *Begin Angular JS-->
+
+    <!-- *End Angular JS-->
+
+    <!-- *Begin Datatables.net -->
+    <!-- *End Datatables.net-->
+
+    <!-- *Begin Font Awesome -->
+    <!-- *End Font Awesome-->
+
+
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/app.css">
-
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/subnav.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="css/footer.css">
   </head>
   <body>
-    
+
+    <!-- *Begin Nav -->
+    <!-- *End Nav-->
+
+
+    <!-- *Begin Subnav -->
+    <!-- *End Subnav-->
+
+
+
+
+    <!-- *Begin Header -->
+    <!-- *End Header-->
+
+
+
+    <!-- *Begin Content -->
+    <!-- *Begin Angular JS-->
+
+    <!-- *End Angular JS-->
+    <!-- *End Content-->
+
+
+
+
+    <!-- *Begin Footer -->
+    <!-- *End Footer-->
+
+
+
+
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
