--- a/midterm_practice-003/about/index.html
+++ b/midterm_practice-003/about/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html ng-app="customersApp" class="no-js" lang="en" dir="ltr">
+<html ng-app class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ET-710 Midterm</title>
+    <title>About</title>
 
     <!-- *Begin AnuglarJS -->
-        <script src="js/vendor/angular-1.7.7/angular.min.js"></script>
-        <script src="js/vendor/angular-1.7.7/angular-animate.min.js"></script>
-        <script src="js/vendor/angular-1.7.7/angular-route.min.js"></script>
+        <script src="../js/vendor/angular-1.7.7/angular.min.js"></script>
+        <script src="../js/vendor/angular-1.7.7/angular-animate.min.js"></script>
+        <script src="../js/vendor/angular-1.7.7/angular-route.min.js"></script>
     <!-- *End AnuglarJS -->
 
     <!-- *Begin Datatables.net -->
@@ -27,15 +27,14 @@
         <link href='http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
     <!-- *End Font Awesome -->
 
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="../css/foundation.css">
+    <link rel="stylesheet" href="../css/app.css">
 
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="css/subnav.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/social.css">
     <link rel="stylesheet" href="css/content.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/footer.css">
 
   </head>
   <body>
@@ -53,12 +52,12 @@
   <div id="topbar-responsive" class="topbar-responsive-links">
     <div class="top-bar-right">
       <ul class="menu simple vertical medium-horizontal">
-        <li><a href="#">Home</a></li>
-        <li><a href="about/index.html">About</a></li>
-        <li><a href="services/index.html">Services</a></li>
-        <li><a href="index.html#!/works">Works</a></li>
-        <li><a href="index.html#!/news">News</a></li>
-        <li><a href="index.html#!/contact">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="../services/index.html">Services</a></li>
+        <li><a href="../index.html#!/works">Works</a></li>
+        <li><a href="../index.html#!/news">News</a></li>
+        <li><a href="../index.html#!/contact">Contact</a></li>
         <li>
           <button type="button" class="button hollow topbar-responsive-button">Categories</button>
         </li>
@@ -76,24 +75,12 @@
 
 
     <!-- *Begin Header -->
-    <div class="rounded-social-buttons">
-  <a class="social-button facebook" href="#"></a>
-  <a class="social-button twitter" href="#"></a>
-  <a class="social-button linkedin" href="#"></a>
-  <a class="social-button youtube" href="#"></a>
-  <a class="social-button instagram" href="#"></a>
-  <a class="social-button pinterest" href="#"></a>
-  <a class="social-button google-plus" href="#"></a>
-  <a class="social-button github" href="#"></a>
-  <a class="social-button tumblr" href="#"></a>
-</div>
-
     <!-- *End Header -->
 
 
 
     <!-- *Begin Content -->
-    <div ng-view></div>
+    <h1>About Page</h1>
     <!-- *Begin AnuglarJS -->
     <div>
       <label>Name:</label>
@@ -166,12 +153,12 @@
                   </div>
                   <div class="column">
                     <ul class="menu marketing-site-footer-bottom-links">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="about/index.html">About</a></li>
-                      <li><a href="services/index.html">Services</a></li>
-                      <li><a href="index.html#!/works">Works</a></li>
-                      <li><a href="index.html#!/news">News</a></li>
-                      <li><a href="index.html#!/contact">Contact</a></li>
+                      <li><a href="../index.html">Home</a></li>
+                      <li><a href="#">About</a></li>
+                      <li><a href="../services/index.html">Services</a></li>
+                      <li><a href="../index.html#!/works">Works</a></li>
+                      <li><a href="../index.html#!/news">News</a></li>
+                      <li><a href="../index.html#!/contact">Contact</a></li>
                     </ul>
                   </div>
                 </div>
@@ -180,12 +167,9 @@
           <!-- *End Footer -->
 
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
-    <script src="js/app.js"></script>
-
-    <script src="js/spa.js"></script>
-
+    <script src="../js/vendor/jquery.js"></script>
+    <script src="../js/vendor/what-input.js"></script>
+    <script src="../js/vendor/foundation.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
