--- a/midterm_practice-003/index.html
+++ b/midterm_practice-003/index.html
@@ -35,9 +35,26 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/social.css">
 
   </head>
   <body>
+
+    <!-- *Begin Social -->
+    <div class="rounded-social-buttons">
+  <a class="social-button facebook" href="#"></a>
+  <a class="social-button twitter" href="#"></a>
+  <a class="social-button linkedin" href="#"></a>
+  <a class="social-button youtube" href="#"></a>
+  <a class="social-button instagram" href="#"></a>
+  <a class="social-button pinterest" href="#"></a>
+  <a class="social-button google-plus" href="#"></a>
+  <a class="social-button github" href="#"></a>
+  <a class="social-button tumblr" href="#"></a>
+</div>
+
+
+    <!-- *End Social -->
 
     <!-- *Begin Nav -->
     <div data-sticky-container>
@@ -58,6 +75,7 @@
         <li><a href="index.html#!/works">Works</a></li>
         <li><a href="index.html#!/news">News</a></li>
         <li><a href="index.html#!/contact">Contact</a></li>
+
         <li>
           <button type="button" class="button hollow topbar-responsive-button">Categories</button>
         </li>
