--- a/midterm_practice-003/index.html
+++ b/midterm_practice-003/index.html
@@ -42,15 +42,15 @@
 
     <!-- *Begin Social -->
     <div class="rounded-social-buttons">
-  <a class="social-button facebook" href="#"></a>
-  <a class="social-button twitter" href="#"></a>
-  <a class="social-button linkedin" href="#"></a>
-  <a class="social-button youtube" href="#"></a>
-  <a class="social-button instagram" href="#"></a>
-  <a class="social-button pinterest" href="#"></a>
-  <a class="social-button google-plus" href="#"></a>
-  <a class="social-button github" href="#"></a>
-  <a class="social-button tumblr" href="#"></a>
+     <a class="social-button facebook" href="https://www.facebook.com/"></a>
+     <a class="social-button twitter" href="https://twitter.com/"></a>
+     <a class="social-button linkedin" href="https://www.linkedin.com/"></a>
+     <a class="social-button youtube" href="https://www.youtube.com/"></a>
+     <a class="social-button instagram" href="https://www.instagram.com/"></a>
+     <a class="social-button pinterest" href="https://www.pinterest.com/"></a>
+     <a class="social-button google-plus" href="https://plus.google.com/discover"></a>
+     <a class="social-button github" href="https://github.com/"></a>
+     <a class="social-button tumblr" href="https://www.tumblr.com/"></a>
 </div>
 
 
