--- a/midterm/contact/index.html
+++ b/midterm/contact/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+    <title>Contact</title>
 
     <!-- *Begin AnuglarJS -->
         <script src="../js/vendor/angular-1.7.7/angular.min.js"></script>
@@ -53,10 +53,10 @@
     <div class="top-bar-right">
       <ul class="menu simple vertical medium-horizontal">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../about/index.html/About">About</a></li>
-        <li><a href="../Services/index.html/Services">Services</a></li>
-        <li><a href="../Works/index.html/works">Works</a></li>
-        <li><a href="../News/index.html/news">News</a></li>
+        <li><a href="../about/index.html">About</a></li>
+        <li><a href="../Services/index.html">Services</a></li>
+        <li><a href="../Works/index.html">Works</a></li>
+        <li><a href="../index.html!/news">News</a></li>
         <li><a href="#">Contact</a></li>
         <li>
           <button type="button" class="button hollow topbar-responsive-button">Categories</button>
@@ -154,10 +154,10 @@
                   <div class="column">
                     <ul class="menu marketing-site-footer-bottom-links">
                       <li><a href="../index.html">Home</a></li>
-                      <li><a href="../about/index.html/About">About</a></li>
-                      <li><a href="../Services/index.html/Services">Services</a></li>
-                      <li><a href="../Works/index.html/works">Works</a></li>
-                      <li><a href="../News/index.html/news">News</a></li>
+                      <li><a href="../about/index.html">About</a></li>
+                      <li><a href="../Services/index.html">Services</a></li>
+                      <li><a href="../Works/index.html">Works</a></li>
+                      <li><a href="../index.html!/news">News</a></li>
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
