--- a/midterm/works/index.html
+++ b/midterm/works/index.html
@@ -47,17 +47,17 @@
     <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
       <button class="menu-icon" type="button" data-toggle></button>
     </span>
-    <a class="topbar-responsive-logo" href="#"><strong>Works</strong></a>
+    <a class="topbar-responsive-logo" href="#"><strong>ET-710 Midterm</strong></a>
   </div>
   <div id="topbar-responsive" class="topbar-responsive-links">
     <div class="top-bar-right">
       <ul class="menu simple vertical medium-horizontal">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="../about/index/inex.html">About</a></li>
+        <li><a href="../about/index.html">About</a></li>
         <li><a href="../Services/index.html">Services</a></li>
         <li><a href="#">Works</a></li>
-        <li><a href="../index.html#!/news">News</a></li>
-        <li><a href="../index.html#!/contact">Contact</a></li>
+        <li><a href="../index.html!/news">News</a></li>
+        <li><a href="../index.html!/contact">Contact</a></li>
         <li>
           <button type="button" class="button hollow topbar-responsive-button">Categories</button>
         </li>
@@ -154,11 +154,11 @@
                   <div class="column">
                     <ul class="menu marketing-site-footer-bottom-links">
                       <li><a href="../index.html">Home</a></li>
-                      <li><a href="../about/index/inex.html">About</a></li>
+                      <li><a href="../about/index.html">About</a></li>
                       <li><a href="../Services/index.html">Services</a></li>
                       <li><a href="#">Works</a></li>
-                      <li><a href="../index.html#!/news">News</a></li>
-                      <li><a href="../index.html#!/contact">Contact</a></li>
+                      <li><a href="../index.html!/news">News</a></li>
+                      <li><a href="../index.html!/contact">Contact</a></li>
                     </ul>
                   </div>
                 </div>
