--- a/midterm/services/index.html
+++ b/midterm/services/index.html
@@ -55,9 +55,9 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../about/index.html">About</a></li>
         <li><a href="#">Services</a></li>
-        <li><a href="../index.html#!/works">Works</a></li>
-        <li><a href="../index.html#!/news">News</a></li>
-        <li><a href="../index.html#!/contact">Contact</a></li>
+        <li><a href="../index.html!/works">Works</a></li>
+        <li><a href="../index.html!/news">News</a></li>
+        <li><a href="../index.html!/contact">Contact</a></li>
         <li>
           <button type="button" class="button hollow topbar-responsive-button">Categories</button>
         </li>
@@ -156,9 +156,9 @@
                       <li><a href="../index.html">Home</a></li>
                       <li><a href="../about/index.html">About</a></li>
                       <li><a href="#">Services</a></li>
-                      <li><a href="../index.html#!/works">Works</a></li>
-                      <li><a href="../index.html#!/news">News</a></li>
-                      <li><a href="../index.html#!/contact">Contact</a></li>
+                      <li><a href="../index.html!/works">Works</a></li>
+                      <li><a href="../index.html!/news">News</a></li>
+                      <li><a href="../index.html!/contact">Contact</a></li>
                     </ul>
                   </div>
                 </div>
