--- a/midterm/services/index.html
+++ b/midterm/services/index.html
@@ -47,7 +47,7 @@
     <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
       <button class="menu-icon" type="button" data-toggle></button>
     </span>
-    <a class="topbar-responsive-logo" href="#"><strong>ET-710 Midterm</strong></a>
+    <a class="topbar-responsive-logo" href="#"><strong>Services</strong></a>
   </div>
   <div id="topbar-responsive" class="topbar-responsive-links">
     <div class="top-bar-right">
