--- a/w20190320/index.html
+++ b/w20190320/index.html
@@ -37,33 +37,53 @@
   <body>
 
 <!-- *Begin Nav -->
-<div data-sticky-container>
-<div class="sticky" data-sticky data-margin-top="0">
- <nav class="top-bar topbar-responsive">
- <div class="top-bar-title">
-   <span data-responsive-toggle="topbar-responsive" data-hide-for="medium">
-     <button class="menu-icon" type="button" data-toggle></button>
-   </span>
-   <a class="topbar-responsive-logo" href="#"><strong>Midterm Practice</strong></a>
- </div>
- <div id="topbar-responsive" class="topbar-responsive-links">
-   <div class="top-bar-right">
-     <ul class="menu simple vertical medium-horizontal">
-       <li><a href="#">Home</a></li>
-       <li><a href="index.html#!/about">About</a></li>
-       <li><a href="index.html#!/services">Services</a></li>
-       <li><a href="index.html#!/works">Works</a></li>
-       <li><a href="index.html#!/news">News</a></li>
-       <li><a href="index.html#!/contact">Contact</a></li>
-       <li>
-         <button type="button" class="button hollow topbar-responsive-button">Categories</button>
-       </li>
-     </ul>
-   </div>
- </div>
-</nav>
+<div class="top-bar foundation-5-top-bar">
+  <div class="top-bar-title">
+    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+      <button class="menu-icon" type="button" data-toggle></button>
+    </span>
+    <strong>Site Title</strong>
+  </div>
+  <div id="responsive-menu">
+    <div class="top-bar-left">
+      <ul class="dropdown vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown" data-auto-height="true" data-animate-height="true">
+        <li>
+          <a href="#">One</a>
+          <ul class="menu">
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+            <li>
+              <a href="#">Three</a>
+              <ul class="menu">
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li>
+                  <a href="#">Three</a>
+                  <ul class="menu">
+                    <li><a href="#">One</a></li>
+                    <li><a href="#">Two</a></li>
+                    <li><a href="#">Three</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="#">Two</a></li>
+        <li><a href="#">Three</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right">
+      <ul class="menu">
+        <li><input type="search" placeholder="Search"></li>
+        <li><button type="button" class="button">Search</button></li>
+      </ul>
+    </div>
+  </div>
 </div>
-</div>
+
+
+
  <!-- *End Nav -->
 
 
